# Identity-Nexus

./: README.md  pyproject.toml
.github/workflows/: release.yml
configs/: identity-nexus.example.toml
docs/: adapters.md
src/identity_nexus/: __init__.py  api.py  cli.py  config.py  models.py  runner.py  storage.py  targets.py
tests/: test_api.py  test_config.py  test_runner.py  test_targets.py
